--- a/react_express_app/package.json
+++ b/react_express_app/package.json
@@ -8,9 +8,10 @@
     "build": "cd client && npm run build"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "axios": "^1.6.0"
+    "dotenv": "^17.2.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
